--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="themes/pb/images/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="themes/pb/images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="themes/pb/images/favicon-16x16.png">
-  <link rel="manifest" href="themes/pb/images/site.html">
+<!--   <link rel="manifest" href="themes/pb/images/site.html"> -->
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
   <title>Cute Animals Bones</title>
